# bevy_modeller

./: Cargo.toml  index.html  trunk.toml
assets/shaders/: depth_post_process.wgsl  post_processing.wgsl  sdf_coarse_prepass.wgsl  sdf_common.wgsl  sdf_compute.wgsl  sdf_render.wgsl
src/: brush_mode.rs  command_bridge.rs  depth_post_process.rs  js_bridge.rs  main.rs  mode.rs  overlay.rs  sdf_compute.rs  sdf_render.rs  selection.rs  translation.rs
src/overlay/: mod.rs
src/post_process/: mod.rs
src/sdf_compute/: mod.rs
src/sdf_render/: mod.rs
src/selection/: mod.rs
src/translation/: mod.rs
ui/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  index.css  index.tsx  vite-env.d.ts
ui/src/types/: modes.ts  rust_event.ts  wasm-bindings.d.ts
