[package]
name = "bevy-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16"
# Add getrandom with js feature to fix WebAssembly support
getrandom = { version = "0.3", features = ["wasm_js"] }

# Enable optimizations for dependencies (but not for our code):
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for release builds
[profile.release]
opt-level = 3

# Web-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.74", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlBodyElement",
    "Node",
    "console",
]}
# Optional but helpful for debugging in browser
console_error_panic_hook = "0.1"

