[package]
name = "bevy-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["webgpu"] }
# Add getrandom with js feature to fix WebAssembly support
getrandom = { version = "0.3", features = ["wasm_js"] }
# For buffer data conversion
bytemuck = { version = "1.14", features = ["derive"] }
crossbeam-queue = "0.3"
crossbeam-channel = "0.2.5"
futures = "0.3"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.74", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlBodyElement",
    "Node",
    "console",
] }
bevy_panorbit_camera = "0.26.0"

# Enable optimizations for dependencies (but not for our code):
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for release builds
[profile.release]
opt-level = 3

# Optional but helpful for debugging in browser
console_error_panic_hook = "0.1"
